Updated config defaults to point to DevNet Sandbox

--- a/fdm.cfg
+++ b/fdm.cfg
@@ -1,7 +1,7 @@
 ---
-fdm_host: '192.168.0.40'
+fdm_host: '10.10.20.50'
 fdm_username: 'admin'
-fdm_password: '1234QWer'
+fdm_password: 'Cisco1234'
 url_filtering:
     rule_name: 'Deny URL categories'
     url_categories:
